Lesson and profile update

--- a/app/src/main/res/layout/fragment_facts.xml
+++ b/app/src/main/res/layout/fragment_facts.xml
@@ -12,12 +12,30 @@
         android:layout_gravity="center|top">
 
         <TextView
+            android:id="@+id/text_content"
+            android:layout_width="397dp"
+            android:layout_height="473dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:text="TextView"
+            android:textSize="24sp"
+            app:autoSizeMaxTextSize="38dp"
+            app:autoSizeTextType="uniform"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
             android:id="@+id/text_label"
             android:layout_width="329dp"
             android:layout_height="76dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
@@ -26,41 +44,12 @@
             android:text="Interesting Fact"
             android:textColor="@color/white"
             android:textSize="36sp"
-            app:layout_constraintBottom_toTopOf="@+id/image_howto"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/text_content"
-            android:layout_width="395dp"
-            android:layout_height="195dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="16dp"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:text="TextView"
-            app:autoSizeMaxTextSize="38dp"
-            app:autoSizeTextType="uniform"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-            android:id="@+id/image_howto"
-            android:layout_width="341dp"
-            android:layout_height="256dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toTopOf="@+id/text_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:src="@tools:sample/avatars" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.536" />
+
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
