--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,6 +21,7 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout_Profile">
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:layout_editor_absoluteX="37dp"
@@ -133,30 +134,64 @@
                         android:layout_marginEnd="21dp"
                         android:layout_marginRight="21dp"
                         android:gravity="center"
-                        android:text="Lesson Summary"
+                        android:text="Badges"
                         android:textColor="@android:color/white"
                         android:textSize="20sp"
-                        app:layout_constraintBottom_toTopOf="@+id/textView15"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_chainStyle="spread_inside" />
 
-                    <TextView
-                        android:id="@+id/textView15"
-                        android:layout_width="311dp"
-                        android:layout_height="77dp"
+                    <ImageView
+                        android:id="@+id/badge1"
+                        android:layout_width="58dp"
+                        android:layout_height="58dp"
                         android:layout_marginStart="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginEnd="21dp"
-                        android:layout_marginRight="21dp"
-                        android:gravity="center"
-                        android:text="bla bla bla bla"
-                        android:textColor="@android:color/white"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView14"
+                        tools:src="@tools:sample/avatars" />
+
+                    <ImageView
+                        android:id="@+id/badge3"
+                        android:layout_width="58dp"
+                        android:layout_height="58dp"
+                        android:layout_marginStart="28dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/badge2"
+                        app:layout_constraintTop_toBottomOf="@+id/textView14"
+                        tools:src="@drawable/badge3" />
+
+                    <ImageView
+                        android:id="@+id/badge4"
+                        android:layout_width="58dp"
+                        android:layout_height="58dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+                        app:layout_constraintStart_toEndOf="@+id/badge3"
+                        app:layout_constraintTop_toBottomOf="@+id/textView14"
+                        tools:src="@drawable/badge4" />
+
+                    <ImageView
+                        android:id="@+id/badge2"
+                        android:layout_width="58dp"
+                        android:layout_height="58dp"
+                        android:layout_marginStart="28dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/badge1"
+                        app:layout_constraintTop_toBottomOf="@+id/textView14"
+                        tools:src="@tools:sample/avatars" />
+
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
 
@@ -276,31 +311,44 @@
                         android:id="@+id/textView5"
                         android:layout_width="320dp"
                         android:layout_height="32dp"
+                        android:layout_marginBottom="8dp"
                         android:gravity="center"
-                        android:text="Description"
+                        android:text="Completed Lessons"
                         android:textColor="@android:color/white"
                         android:textSize="20sp"
-                        app:layout_constraintBottom_toTopOf="@+id/textView7"
-                        app:layout_constraintEnd_toEndOf="@+id/textView7"
-                        app:layout_constraintStart_toStartOf="@+id/textView7"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:layout_editor_absoluteX="14dp" />
 
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="319dp"
-                        android:layout_height="97dp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginEnd="14dp"
-                        android:layout_marginRight="14dp"
-                        android:gravity="center"
-                        android:text="bla bla bla bla"
-                        android:textColor="@android:color/white"
+                    <ScrollView
+                        android:id="@+id/scrollView3"
+                        android:layout_width="332dp"
+                        android:layout_height="95dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="358dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                        app:layout_constraintTop_toTopOf="@+id/constraintLayout4">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/textView4"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingStart="20dp"
+                                android:paddingRight="20dp"
+                                android:text="TextView"
+                                android:textColor="#FFFFFF" />
+                        </LinearLayout>
+                    </ScrollView>
+
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
         </android.support.constraint.ConstraintLayout>
