--- a/app/src/main/res/layout/login_view.xml
+++ b/app/src/main/res/layout/login_view.xml
@@ -6,23 +6,65 @@
     android:layout_height="match_parent"
     android:background="@drawable/blue_sky">
 
+    <EditText
+        android:id="@+id/email_textbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/enter_textbox"
+        android:ems="10"
+        android:hint="Email..."
+        android:inputType="textWebEmailAddress"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/secondary_text_dark_nodisable"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/pass_textbox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view"
+        app:layout_constraintVertical_bias="0.81" />
+
+    <EditText
+        android:id="@+id/pass_textbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="44dp"
+        android:background="@drawable/enter_textbox"
+        android:ems="10"
+        android:hint="Password..."
+        android:inputType="textPassword"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/secondary_text_dark_nodisable"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <View
         android:id="@+id/view"
         android:layout_width="239dp"
         android:layout_height="102dp"
         android:layout_marginStart="73dp"
         android:layout_marginLeft="73dp"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="96dp"
         android:layout_marginEnd="72dp"
         android:layout_marginRight="72dp"
-        android:layout_marginBottom="32dp"
         android:background="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@+id/usename_textbox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.49" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_su"
@@ -40,53 +82,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/usename_textbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
-        android:background="@drawable/enter_textbox"
-        android:ems="10"
-        android:hint="Username..."
-        android:inputType="textEmailAddress"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/secondary_text_dark_nodisable"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/email_textbox"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    <EditText
-        android:id="@+id/email_textbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
-        android:background="@drawable/enter_textbox"
-        android:ems="10"
-        android:hint="Password..."
-        android:inputType="textPassword"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/secondary_text_dark_nodisable"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usename_textbox" />
 
     <ProgressBar
         android:id="@+id/su_progressBar"
