--- a/app/src/main/res/layout/fragment_questions.xml
+++ b/app/src/main/res/layout/fragment_questions.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".StepsFragment">
@@ -16,10 +17,8 @@
             android:layout_width="325dp"
             android:layout_height="55dp"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_corner"
             android:gravity="center"
@@ -38,7 +37,7 @@
             android:layout_marginBottom="8dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:text="TextView"
+            android:text="Text\nView"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/radioGroup1"
             tools:layout_editor_absoluteX="0dp" />
@@ -47,7 +46,7 @@
             android:id="@+id/radioGroup1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="8dp"
             android:orientation="vertical"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
@@ -81,10 +80,10 @@
             android:id="@+id/q2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="8dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:text="TextView"
+            android:text="Text\nView"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
             tools:layout_editor_absoluteX="0dp" />
@@ -93,7 +92,7 @@
             android:id="@+id/radioGroup2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="8dp"
             android:paddingLeft="20dp"
             app:layout_constraintBottom_toTopOf="@+id/q3"
             tools:layout_editor_absoluteX="0dp">
@@ -124,10 +123,10 @@
             android:id="@+id/q3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="8dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:text="TextView"
+            android:text="Text\nView"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/radioGroup3"
             tools:layout_editor_absoluteX="0dp" />
@@ -136,7 +135,7 @@
             android:id="@+id/radioGroup3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="60dp"
             android:paddingLeft="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:layout_editor_absoluteX="0dp">
@@ -165,22 +164,20 @@
 
         <Button
             android:id="@+id/completelesson"
-            android:layout_width="165dp"
-            android:layout_height="52dp"
+            android:layout_width="145dp"
+            android:layout_height="46dp"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/signin_button"
             android:text="Complete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.965"
+            app:layout_constraintHorizontal_bias="0.968"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/radioGroup3"
-            app:layout_constraintVertical_bias="0.666" />
+            app:layout_constraintVertical_bias="1.0" />
 
     </android.support.constraint.ConstraintLayout>
 
