--- a/app/src/main/res/layout/fulllesson_view.xml
+++ b/app/src/main/res/layout/fulllesson_view.xml
@@ -7,16 +7,21 @@
     android:layout_height="match_parent">
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="414dp"
-        android:layout_height="662dp">
+        android:id="@+id/constraintLayout5"
+        android:layout_width="match_parent"
+        android:layout_height="662dp"
+        android:layout_marginBottom="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
-            android:layout_width="410dp"
+            android:layout_width="match_parent"
             android:layout_height="642dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:foregroundGravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -31,9 +36,9 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout3"
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="58dp"
-        android:background="#4B4B4B"
+        android:background="#363636"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
