--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -75,7 +75,7 @@
             android:id="@+id/horrecyclerView"
             android:layout_width="405dp"
             android:layout_height="209dp"
-            android:layout_marginTop="31dp"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="8dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -83,6 +83,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
             app:layout_constraintVertical_bias="0.006">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/horrecyclerView2"
+            android:layout_width="405dp"
+            android:layout_height="209dp"
+            android:layout_marginTop="150dp"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
+            app:layout_constraintVertical_bias="1.0">
 
         </android.support.v7.widget.RecyclerView>
     </android.support.constraint.ConstraintLayout>
