--- a/app/src/main/res/layout/horlayout_listitem.xml
+++ b/app/src/main/res/layout/horlayout_listitem.xml
@@ -8,11 +8,11 @@
     <android.support.v7.widget.CardView
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_alignParentTop="true"
         app:cardBackgroundColor="#468FF5"
         app:cardCornerRadius="10dp"
-        app:cardMaxElevation="2dp"
         app:cardElevation="3dp"
-        android:layout_alignParentTop="true">
+        app:cardMaxElevation="2dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -56,4 +56,5 @@
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
+
 </RelativeLayout>
