--- a/app/src/main/res/layout/horlayout_listitem.xml
+++ b/app/src/main/res/layout/horlayout_listitem.xml
@@ -1,14 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="1dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_alignParentTop="true"
+        android:background="@drawable/rounded_corner"
         app:cardBackgroundColor="#468FF5"
         app:cardCornerRadius="10dp"
         app:cardElevation="3dp"
