--- a/app/src/main/res/layout/dialogbox.xml
+++ b/app/src/main/res/layout/dialogbox.xml
@@ -8,14 +8,16 @@
         android:id="@+id/dialogboxTitle"
         android:layout_width="match_parent"
         android:layout_height="59dp"
-        android:background="@android:color/holo_blue_light"
+        android:background="#1C94F3"
         android:gravity="center_horizontal|center_vertical"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:text="Dialogbox Title"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:autoSizeMaxTextSize="30sp"
+        app:autoSizeTextType="uniform" />
 
     <EditText
         android:id="@+id/input1"
