--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -107,6 +107,17 @@
                     app:layout_constraintTop_toTopOf="@+id/imageView3"
                     app:layout_constraintVertical_bias="0.405" />
 
+                <ProgressBar
+                    android:id="@+id/profileProgressBar"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/profilepic"
+                    app:layout_constraintEnd_toEndOf="@+id/profilepic"
+                    app:layout_constraintStart_toStartOf="@+id/profilepic"
+                    app:layout_constraintTop_toBottomOf="@+id/profileUsername" />
+
             </android.support.constraint.ConstraintLayout>
 
             <android.support.v7.widget.CardView
