--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -45,11 +45,9 @@
             android:id="@+id/item_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/item_age"
+            android:layout_below="@id/item_age"
             android:layout_marginStart="6dp"
-            android:layout_marginTop="5dp"
-            android:layout_toEndOf="@+id/item_age"
-            android:text="TextView" />
+            android:layout_toRightOf="@id/item_image" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
