steps and facts view update

--- a/app/src/main/res/layout/fragment_facts.xml
+++ b/app/src/main/res/layout/fragment_facts.xml
@@ -22,12 +22,8 @@
                 android:id="@+id/text_label"
                 android:layout_width="match_parent"
                 android:layout_height="76dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/rounded_corner"
                 android:gravity="center"
                 android:text="Interesting Fact"
@@ -38,12 +34,17 @@
                 android:id="@+id/text_content"
                 android:layout_width="match_parent"
                 android:layout_height="465dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/rounded_corner"
+                android:gravity="center"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="10dp"
                 android:text="TextView"
+                android:textColor="@color/white"
                 android:textSize="24sp"
-                app:autoSizeMaxTextSize="38dp"
+                app:autoSizeMaxTextSize="25dp"
                 app:autoSizeTextType="uniform" />
 
             <Space
