--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -10,7 +10,7 @@
 <item android:right="1dp" android:left="1dp" android:bottom="2dp">
     <shape
         android:shape="rectangle">
-        <solid android:color="#0073FF"/>
+        <solid android:color="#468FF5"/>
         <corners android:radius="20dp"/>
     </shape>
 </item>
