--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -8,14 +8,14 @@
     android:background="@drawable/rounded_corner"
     android:clickable="true"
     android:foreground="?selectableItemBackground"
-    card_view:cardBackgroundColor="#468FF5"
-    card_view:cardCornerRadius="10dp"
-    card_view:cardElevation="3dp"
-    card_view:contentPadding="5dp">
+    card_view:cardBackgroundColor="#00FFFFFF"
+    card_view:cardCornerRadius="20dp"
+    card_view:cardElevation="3dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corner"
         android:padding="16dp">
 
         <ImageView
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/item_image"
+            android:textColor="@color/white"
             android:textSize="30sp" />
 
         <TextView
@@ -39,7 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/item_title"
-            android:layout_toRightOf="@+id/item_image" />
+            android:layout_toRightOf="@+id/item_image"
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/item_desc"
@@ -47,7 +49,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/item_age"
             android:layout_marginStart="6dp"
-            android:layout_toRightOf="@id/item_image" />
+            android:layout_toRightOf="@id/item_image"
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
