--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -72,7 +72,7 @@
             android:layout_marginTop="16dp"
             android:gravity="center_horizontal"
             android:paddingRight="20dp"
-            android:text="Level 1"
+            android:text="← Level 1 →"
             android:textColor="@android:color/black"
             android:textSize="24sp"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
