--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -210,12 +210,10 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView7"
                 android:layout_width="348dp"
-                android:layout_height="151dp"
+                android:layout_height="181dp"
                 android:layout_margin="10dp"
                 android:layout_marginStart="15dp"
-                android:layout_marginLeft="15dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
                 app:cardBackgroundColor="#468FF5"
                 app:cardCornerRadius="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -249,11 +247,12 @@
                         android:layout_width="332dp"
                         android:layout_height="86dp"
                         android:layout_marginStart="8dp"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginRight="8dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginBottom="8dp"
+                        app:layout_constraintBottom_toTopOf="@+id/textView6"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView16">
 
@@ -266,37 +265,53 @@
 
                             <ImageView
                                 android:id="@+id/imageView12"
-                                android:layout_width="wrap_content"
+                                android:layout_width="70dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="10dp"
                                 android:layout_weight="1"
-                                tools:srcCompat="@tools:sample/avatars" />
+                                android:background="@drawable/profilepic1" />
 
                             <ImageView
                                 android:id="@+id/imageView13"
-                                android:layout_width="wrap_content"
+                                android:layout_width="70dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="10dp"
-                                android:layout_weight="1"
-                                tools:srcCompat="@tools:sample/avatars" />
+                                android:background="@drawable/profilepic2" />
 
                             <ImageView
                                 android:id="@+id/imageView15"
-                                android:layout_width="wrap_content"
+                                android:layout_width="70dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="10dp"
                                 android:layout_weight="1"
-                                tools:srcCompat="@tools:sample/avatars" />
+                                android:background="@drawable/profilepic3" />
 
                             <ImageView
                                 android:id="@+id/imageView14"
-                                android:layout_width="wrap_content"
+                                android:layout_width="70dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="10dp"
                                 android:layout_weight="1"
-                                tools:srcCompat="@tools:sample/avatars" />
+                                android:background="@drawable/profilepic4" />
                         </LinearLayout>
                     </HorizontalScrollView>
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="200dp"
+                        android:layout_height="45dp"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginEnd="32dp"
+                        android:layout_marginBottom="8dp"
+                        android:background="@drawable/signin_button"
+                        android:gravity="center"
+                        android:text="+ Add Friends"
+                        android:textColor="@color/white"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />
+
 
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
@@ -306,12 +321,13 @@
                 android:layout_width="348dp"
                 android:layout_height="151dp"
                 android:layout_margin="10dp"
+                android:layout_marginTop="24dp"
                 app:cardBackgroundColor="#468FF5"
                 app:cardCornerRadius="10dp"
                 app:layout_constraintBottom_toTopOf="@+id/cardView5"
                 app:layout_constraintEnd_toEndOf="@+id/cardView5"
                 app:layout_constraintStart_toStartOf="@+id/cardView5"
-                app:layout_constraintTop_toTopOf="@id/cardView5">
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_Profile">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -354,6 +370,7 @@
                                 android:id="@+id/textView4"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:gravity="top"
                                 android:paddingStart="20dp"
                                 android:paddingRight="20dp"
                                 android:text="TextView"
