--- a/app/src/main/res/layout/horlayout_listitem.xml
+++ b/app/src/main/res/layout/horlayout_listitem.xml
@@ -3,14 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="1dp">
+    android:layout_margin="1dp"
+    android:background="@drawable/rounded_corner">
 
     <android.support.v7.widget.CardView
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_alignParentTop="true"
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="#00FFFFFF"
+        app:cardCornerRadius="20dp"
         app:cardElevation="3dp"
         app:cardMaxElevation="2dp">
 
