--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -12,50 +12,56 @@
         android:layout_width="239dp"
         android:layout_height="102dp"
         android:layout_marginStart="73dp"
-        android:layout_marginLeft="73dp"
         android:layout_marginTop="38dp"
         android:layout_marginEnd="72dp"
-        android:layout_marginRight="72dp"
         android:layout_marginBottom="427dp"
         android:background="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.51" />
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="315dp"
         android:layout_height="90dp"
         android:layout_marginStart="24dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="174dp"
+        android:layout_marginTop="108dp"
         android:layout_marginEnd="28dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginBottom="175dp"
         android:background="@drawable/login_button"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view"
-        app:layout_constraintVertical_bias="0.916" />
+        app:layout_constraintTop_toBottomOf="@+id/view" />
 
     <Button
         android:id="@+id/btn_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/signup_button"
+        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login"
+        app:layout_constraintVertical_bias="0.0" />
+
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="314dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="37dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="96dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
+
+
 </android.support.constraint.ConstraintLayout>
