--- a/app/src/main/res/layout/signup_view.xml
+++ b/app/src/main/res/layout/signup_view.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="93dp"
         android:background="@drawable/signin_button"
         android:text="SIGN UP"
-        android:textColor="@color/common_google_signin_btn_text_light"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,6 +93,7 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_su"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_textbox" />
 
